article istedet for div

--- a/08-semantisk.html
+++ b/08-semantisk.html
@@ -64,21 +64,21 @@
 </head>
 
 <body>
-    <div class="center">
+    <article class="center">
         <h2>Personliste</h2>
-    </div>
+    </article>
     <h1>Alle</h1>
-    <div class="menu">
+    <article class="menu">
         <button class="filter" data-hold="alle">Alle</button>
         <button class="filter" data-hold="a">A</button>
         <button class="filter" data-hold="b">B</button>
-    </div>
+    </article>
 
 
 
-    <div id="personer">
+    <article id="personer">
 
-    </div>
+    </article>
 
     <script>
         document.addEventListener("DOMContentLoaded", start);
