pop up, og knap

--- a/undervisningsopgaver/filtreringsotering/08-semantisk.html
+++ b/undervisningsopgaver/filtreringsotering/08-semantisk.html
@@ -68,11 +68,11 @@
         <h2>Personliste</h2>
     </article>
     <h1>Alle</h1>
-    <article class="menu">
+    <nav class="menu">
         <button class="filter" data-hold="alle">Alle</button>
         <button class="filter" data-hold="a">A</button>
         <button class="filter" data-hold="b">B</button>
-    </article>
+    </nav>
 
 
 
