opgaver - single view

--- a/Single/01-popup.html
+++ b/Single/01-popup.html
@@ -60,6 +60,7 @@
             height: 100vh;
             position: fixed;
             background-color: red;
+            display: none;
         }
     </style>
 
