--- a/Single/02-indhold.html
+++ b/Single/02-indhold.html
@@ -60,6 +60,7 @@
             height: 100vh;
             position: fixed;
             background-color: red;
+            display: none;
         }
 
         #indhold {
@@ -81,10 +82,6 @@
         #luk button {
             font-size: 2em;
         }
-
-        html {
-            overflow-y: hidden;
-        }
     </style>
 
 
@@ -96,9 +93,8 @@
 
 <body>
     <div id="popup">
-    <div id="luk"><button>X</button></div>
-    <div id="indhold"></div>
-
+        <div id="luk"><button>X</button></div>
+        <div id="indhold"></div>
     </div>
 
     <article class="center">
